# raito

./: .gitignore  .tool-versions  Cargo.toml  Makefile  README.md  Scarb.toml  _typos.toml
.github/workflows/: build.yml  check.yml
crates/raito-bridge-node/: Cargo.toml  README.md
crates/raito-bridge-node/src/: app.rs  bitcoin.rs  file_sink.rs  indexer.rs  main.rs  mmr.rs  rpc.rs  shutdown.rs  sparse_roots.rs
crates/raito-spv-client/: Cargo.toml  README.md
crates/raito-spv-client/src/: fetch.rs  format.rs  main.rs  proof.rs  verify.rs
crates/raito-spv-core/: Cargo.toml
crates/raito-spv-core/src/: bitcoin.rs  block_mmr.rs  lib.rs
docs/: resource_usage_report.csv
scripts/data/: build_recent_proof.py  client.sh  collect_resources.py  format_args.py  generate_data.py  generate_program_input.py  integration_tests.sh  logging_setup.py  mmr.py  prove_pow.py  requirements.txt
scripts/deploy/: Makefile  README.md  ansible.cfg  env.example  expose.yml  inventory.yml  site.yml
scripts/deploy/roles/expose/tasks/: main.yml
scripts/deploy/roles/fetch_db/tasks/: main.yml
scripts/deploy/roles/setup/handlers/: main.yml
scripts/deploy/roles/setup/tasks/: main.yml
scripts/deploy/roles/setup/templates/: env.j2  google-cloud-ops-agent-config.yaml.j2  raito-bridge-node.service.j2  raito-build-recent-proof.service.j2  raito-build-recent-proof.timer.j2
scripts/deploy/roles/start/tasks/: main.yml
scripts/deploy/roles/stop/tasks/: main.yml
scripts/deploy/roles/update/tasks/: main.yml
