[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Bitcoin
bitcoin = { version = "0.32.6", features = ["serde"] }

# RPC
jsonrpsee = { version = "0.25.1", features = ["http-client", "async-client"] }
base64 = "0.21"

# Storage
libmdbx = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"

# Hashing
blake2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
hex = "0.4"

# BigInt
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.12"
wiremock = "0.5"
tempfile = "3.10"
