[package]
name = "raito-bridge-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }

# Merkle mountain range
accumulators = { git = "https://github.com/m-kus/rust-accumulators", rev = "588711663348fcf22fd4af624d0b0cd3bea709f1", features = ["blake", "memory", "sqlite", "mmr"]}

# Bitcoin RPC and types
jsonrpsee.workspace = true
bitcoin.workspace = true
base64.workspace = true
# Storage
libmdbx.workspace = true
# CLI
clap.workspace = true
dotenv.workspace = true
# Hashing
blake2.workspace = true
# Serialization
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
# BigInt
num-bigint.workspace = true
num-traits.workspace = true
# Error handling
thiserror.workspace = true
anyhow.workspace = true
# Retry logic
backoff = { version = "0.4", features = ["futures", "tokio"] }
# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Testing
mockall.workspace = true
wiremock.workspace = true
tempfile.workspace = true 