[package]
name = "raito-spv-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

# Core SPV functionality
raito-spv-core = { path = "../raito-spv-core" }

# Bitcoin RPC and types
bitcoin = {workspace = true }

# CLI and env
clap = { workspace = true }
dotenv = { workspace = true }

# Async runtime
tokio = { workspace = true }
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Stwo-cairo
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "0e90b31", features = [
    "parallel",
], default-features = false }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "6f6a9d46306c8e38e2ba356f679d02a0a4af7d59", features = ["std"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-brief = { version = "0.1", features = ["std"] }
